--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,18 +1,67 @@
+@import url('https://fonts.googleapis.com/css?family=Fjalla+One');
+
+body {
+	font-family: 'Fjalla', sans-serif;
+	margin: 0;
+}
 div#banner {
-	position: fixed;
 	top: 0;
 	left: 0;
-	background-color: #DDEEEE;
 	width: 100%;
+	background-color: #f1f1f1;
+  	padding: 10px;
 }
 div#container {
 	position: relative;
 	text-align: center;
 }
+div#navbar {
+	overflow: hidden;
+  	background-color: #333;
+  	width: 100%;
+}
+a#navbar-page {
+	display: block;
+	float: left;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px;
+	text-decoration: none;
+}
+a#social {
+	display: block;
+	float: right;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 8px;
+	text-decoration: none;
+}
 img#reddit-link {
+	padding: 0px;
 	width: 30px;
 	height: 30px;
-	padding-top: 5px;
-	padding-bottom: 20px;
-	padding-right: 25px;
+	float: right;
+}
+#navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+#navbar a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.content {
+  padding: 16px;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sticky + .content {
+  padding-top: 60px;
 }
