--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,6 +20,17 @@ div#navbar {
   	background-color: #333;
   	width: 100%;
 }
+
+#navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: #ddd;
+  color: black;
+}
+
+#navbar a.active, .dropdown:active .dropbtn {
+  background-color: #4CAF50;
+  color: white;
+}
+
 a#navbar-page {
 	display: block;
 	float: left;
@@ -28,29 +39,52 @@ a#navbar-page {
 	padding: 14px;
 	text-decoration: none;
 }
-a#social {
-	display: block;
-	float: right;
-	color: #f2f2f2;
-	text-align: center;
-	padding: 8px;
-	text-decoration: none;
-}
-img#reddit-link {
-	padding: 0px;
-	width: 30px;
-	height: 30px;
-	float: right;
-}
-#navbar a:hover {
-  background-color: #ddd;
-  color: black;
+
+.dropdown {
+  float: left;
+  overflow: hidden;
 }
 
-#navbar a.active {
-  background-color: #4CAF50;
+.dropdown .dropbtn {
+  font-size: 16px; 
+  border: none;
+  outline: none;
   color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
 }
+
+.dropdown-content {
+  display: block;
+  color: black;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  min-height: 40px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 16px 10px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
 
 .content {
   padding: 16px;
