--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,15 @@ body {
 	font-family: 'Fjalla', sans-serif;
 	margin: 0;
 }
+hr {
+  color: #ffffff;
+  width: 80%;
+  height: 5px;
+  margin: 0px;
+  background-color: #333333;
+  border: none;
+  margin-left: auto;
+}
 div#banner {
 	top: 0;
 	left: 0;
