--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,6 +28,7 @@ div#navbar {
 	overflow: hidden;
   background-color: #333;
   width: 100%;
+  z-index: 1;
 }
 
 #navbar a:hover, .dropdown:hover .dropbtn {
