--- a/about.css
+++ b/about.css
@@ -17,7 +17,7 @@ body {
   display: inline-grid;
   width: 300px;
   height: 300px;
-  perspective: 500px;
+  perspective: 1000px;
 }
 
 .flip-card-inner {
@@ -51,3 +51,56 @@ body {
   color: white;
   transform: rotateY(180deg);
 }
+
+<style>
+body {margin:0;height:2000px;}
+
+.icon-bar {
+  position: fixed;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.icon-bar a {
+  display: block;
+  text-align: center;
+  padding: 16px;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 20px;
+}
+
+.icon-bar a:hover {
+  background-color: #000;
+}
+
+.facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.google {
+  background: #dd4b39;
+  color: white;
+}
+.instagram {
+  background: #333;
+  color: white;
+}
+.youtube {
+  background: #bb0000;
+  color: white;
+}
+
+.content {
+  margin-left: 75px;
+  font-size: 30px;
+}
+</style>
